# littlewing

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
bench/: littlewing_bench.rs
benches/: game_bench.rs  littlewing.rs
src/: attack.rs  bitboard.rs  board.rs  clock.rs  color.rs  common.rs  dumb7fill.rs  eval.rs  fen.rs  game.rs  hyperbola.rs  lib.rs  littlewing.rs  main.rs  moves.rs  moves_generator.rs  pgn.rs  piece.rs  piece_move.rs  piece_move_generator.rs  piece_move_list.rs  piece_move_notation.rs  piece_square_table.rs  position.rs  positions.rs  pst.rs  search.rs  square.rs  transposition.rs  transposition_table.rs  transpositions.rs  zobrist.rs
src/littlewing/: attack.rs  bitboard.rs  clock.rs  cmd.rs  common.rs  eval.rs  fen.rs  game.rs  mod.rs  moves.rs  piece.rs  position.rs  search.rs  square.rs  zobrist.rs
src/littlewing/protocols/: cli.rs  xboard.rs
src/protocols/: cli.rs  mod.rs  uci.rs  xboard.rs
test/: littlewing_test.rs
tests/: fool.pgn  wac.rs  zukertort_vs_steinitz_1886.pgn
