[package]
name = "littlewing"
description = """
A chess engine rated at 2050+ ELO, compatible with both UCI and XBoard
protocols, with a nice CLI, and a documented library.
"""
version = "0.6.0"
license = "GPL-3.0"
authors = ["Vincent Ollivier <v@vinc.cc>"]
repository = "https://github.com/vinc/littlewing"
homepage = "https://vinc.cc/projects/littlewing.html"
readme = "README.md"

[lib]
name = "littlewing"
path = "src/lib.rs"

[[bin]]
name = "littlewing"
path = "src/main.rs"
doc = false

[dependencies]
atty = "0.2"
colored = "1.8"
dirs = "2.0"
getopts = "0.2"
lazy_static = "1.0"
rand = "0.7"
rand_xorshift = "0.2"
regex = "1.0"
rustyline = "5.0"

[badges]
travis-ci = { repository = "vinc/littlewing" }
