[package]
name = "littlewing"
description = """
A chess engine rated at 2050+ ELO, compatible with both UCI and XBoard
protocols, with a nice CLI, and a documented library.
"""
version = "0.6.0"
license = "GPL-3.0"
authors = ["Vincent Ollivier <v@vinc.cc>"]
repository = "https://github.com/vinc/littlewing"
homepage = "https://vinc.cc/projects/littlewing.html"
readme = "README.md"

[lib]
name = "littlewing"
path = "src/lib.rs"

[[bin]]
name = "littlewing"
path = "src/main.rs"
doc = false

[dependencies]
atty = "0.2.14"
colored = "1.9.3"
dirs = "3.0.0"
getopts = "0.2.21"
lazy_static = "1.4.0"
rand = "0.7.3"
rand_xorshift = "0.2.0"
regex = "1.3.9"
rustyline = "7.1.0"
rustyline-derive = "0.3.1"

[badges]
travis-ci = { repository = "vinc/littlewing" }
