[package]
name = "littlewing"
description = """
A chess engine rated at 2050+ ELO, compatible with both UCI and XBoard
protocols, with a nice CLI, and a documented library.
"""
version = "0.6.0"
license = "GPL-3.0"
authors = ["Vincent Ollivier <v@vinc.cc>"]
repository = "https://github.com/vinc/littlewing"
homepage = "https://vinc.cc/software/littlewing"
readme = "README.md"

[lib]
name = "littlewing"
path = "src/lib.rs"

[[bin]]
name = "littlewing"
path = "src/main.rs"
doc = false

[features]
default = ["std", "bin"]
std = ["dirs", "regex", "rustyline", "rustyline-derive", "no-std-compat/std"]
bin = ["atty", "getopts"]

[dependencies]
atty = { version = "0.2.14", optional = true }
dirs = { version = "3.0.0", optional = true }
getopts = { version = "0.2.21", optional = true }
lazy_static = "1.4.0"
no-std-compat = { version = "0.4.1", features = ["alloc", "compat_macros"] }
rand = { version = "0.7.3", default-features = false }
rand_xorshift = { version = "0.2.0", default-features = false }
regex = { version = "1.3.9", optional = true }
rustyline = { version = "6.2.0", optional = true }
rustyline-derive = { version = "0.5.0", optional = true }

[badges]
travis-ci = { repository = "vinc/littlewing" }
